--- a/Configs/sim/ni_shallow_2x2.yml
+++ b/Configs/sim/ni_shallow_2x2.yml
@@ -1,4 +1,7 @@
-network-size: 2
+network_size: 2
+simulation_time: 10us
+network_template: ni_template
+tb_template: ni_tb_template
 designs:
     - Router_32_bit_credit_based_packet_drop_classifier_SHMU
     - NI_FT_shallow
